--- a/output/team.html
+++ b/output/team.html
@@ -2,65 +2,80 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Team Structure</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>My Team</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/c502137733.js"></script>
-    <link rel="stylesheet" href="../stylesheets/style.css">
 </head>
 
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 jumbotron mb-3 header">
-                <h1 class="text-center">Team:</h1>
+            <div class="col-12 jumbotron mb-3">
+                <h1 class="text-center">Employee Database</h1>
             </div>
         </div>
     </div>
     <div class="container">
         <div class="row">
-            <div class="team-area col-12 d-flex justify-content-center">
-                <div class="employee-card">
-                    <div class="card-header">
-                        <h2 class="card-title">Joe Biden</h2>
-                        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i> Engineer</h3>
-                    </div>
-                    <div class="card-body">
-                        <ul class="list-group">
-                            <li class="list-group-item">ID: 46</li>
-                            <li class="list-group-item">Email: <a href="mailto:joe@president.com">joe@president.com</a></li>
-                            <li class="list-group-item">Office Number: 555-555-5555</li>
-                        </ul>
-                    </div>
-                <div class="employee-card">
-                    <div class="card-header">
-                        <h2 class="card-title">Tom Brady</h2>
-                        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i> Engineer</h3>
-                    </div>
-                    <div class="card-body">
-                        <ul class="list-group">
-                            <li class="list-group-item">ID: 12</li>
-                            <li class="list-group-item">Email: <a href="mailto:tom@bucs.com">tom@bucs.com</a></li>
-                            <li class="list-group-item">Office Number: 813-555-1287</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="employee-card">
-                    <div class="card-header">
-                        <h2 class="card-title">Kristin S</h2>
-                        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i> Intern</h3>
-                    </div>
-                    <div class="card-body">
-                        <ul class="list-group">
-                            <li class="list-group-item">ID: 12</li>
-                            <li class="list-group-item">Email: <a
-                                    href="mailto:kristin@bootcamp.com">kristin@bootcamp.com</a></li>
-                            <li class="list-group-item">Office Number: 314-555-0000</li>
-                        </ul>
-                    </div>
-                </div>
+            <div class="col-12 d-flex justify-content-center">
+                <div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Tom</h2>
+        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 123</li>
+            <li class="list-group-item">Email: <a href="mailto:tom@email.com">tom@email.com</a></li>
+            <li class="list-group-item">Office number: 314-555-5555</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Larry</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 456</li>
+            <li class="list-group-item">Email: <a href="mailto:larry@email.com">larry@email.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/larrygh" target="_blank" rel="noopener noreferrer">larrygh</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Cindy</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 789</li>
+            <li class="list-group-item">Email: <a href="mailto:cindy@email.com">cindy@email.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/cindygh" target="_blank" rel="noopener noreferrer">cindygh</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Mandy</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 852</li>
+            <li class="list-group-item">Email: <a href="mailto:mandy@email.com">mandy@email.com</a></li>
+            <li class="list-group-item">School: SLU</li>
+        </ul>
+    </div>
+</div>
+
             </div>
         </div>
     </div>
