update readme and added example gif

--- a/output/team.html
+++ b/output/team.html
@@ -15,65 +15,52 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 jumbotron mb-3">
-                <h1 class="text-center">Employee Database</h1>
+            <div class="col-12 jumbotron mb-3 team-heading">
+                <h1 class="text-center">My Team</h1>
             </div>
         </div>
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-12 d-flex justify-content-center">
+            <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Tom</h2>
-        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 123</li>
-            <li class="list-group-item">Email: <a href="mailto:tom@email.com">tom@email.com</a></li>
-            <li class="list-group-item">Office number: 314-555-5555</li>
-        </ul>
-    </div>
+  <div class="card-header">
+      <h2 class="card-title">Tom Brady</h2>
+      <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+  </div>
+  <div class="card-body">
+      <ul class="list-group">
+          <li class="list-group-item">ID: 12</li>
+          <li class="list-group-item">Email: <a href="mailto:tom@email.com">tom@email.com</a></li>
+          <li class="list-group-item">Office number: undefined</li>
+      </ul>
+  </div>
 </div>
 <div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Larry</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 456</li>
-            <li class="list-group-item">Email: <a href="mailto:larry@email.com">larry@email.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/larrygh" target="_blank" rel="noopener noreferrer">larrygh</a></li>
-        </ul>
-    </div>
+  <div class="card-header">
+      <h2 class="card-title">Mike Evans</h2>
+      <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+  </div>
+  <div class="card-body">
+      <ul class="list-group">
+          <li class="list-group-item">ID: mike@email.com</li>
+          <li class="list-group-item">Email: <a href="mailto:13">13</a></li>
+          <li class="list-group-item">GitHub: <a href="https://github.com/undefined" target="_blank" rel="noopener noreferrer">undefined</a></li>
+      </ul>
+  </div>
 </div>
 <div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Cindy</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 789</li>
-            <li class="list-group-item">Email: <a href="mailto:cindy@email.com">cindy@email.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/cindygh" target="_blank" rel="noopener noreferrer">cindygh</a></li>
-        </ul>
-    </div>
-</div>
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Mandy</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 852</li>
-            <li class="list-group-item">Email: <a href="mailto:mandy@email.com">mandy@email.com</a></li>
-            <li class="list-group-item">School: SLU</li>
-        </ul>
-    </div>
+  <div class="card-header">
+      <h2 class="card-title">Larry Fitz</h2>
+      <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+  </div>
+  <div class="card-body">
+      <ul class="list-group">
+          <li class="list-group-item">ID: larry@email.com</li>
+          <li class="list-group-item">Email: <a href="mailto:17">17</a></li>
+          <li class="list-group-item">School: ASU</li>
+      </ul>
+  </div>
 </div>
 
             </div>
